# tasks

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  Openza.Tasks.slnx  PRIVACY.md  README.md  SECURITY.md  dev.sh  pubspec.yaml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  stale.yml
docs/: TODO.md  architecture.md  backup-and-release-channels.md  design-guidelines.md  github-integration.md  gtd-project-trust-gaps.md  migration_v1_to_v2.sql  preview-backlog-progress.md  store-submission.md  todoist-integration.md  winui-ui-polish-tracker.md
docs/development/: environment.md
flatpak/: com.openza.tasks.metainfo.xml  com.openza.tasks.yml
legacy/rust-sync-reference/: README.md
lib/: main.dart
lib/app/: app.dart  app_router.dart  app_theme.dart
linux/: CMakeLists.txt  openza.desktop
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: api.rs  ffi.rs
rust/src/db/: repository.rs
rust/src/domain/: models.rs
rust/src/sync/: engine.rs
scripts/: build-appimage.sh  build-flatpak.sh
test/: widget_test.dart
tools/: Import-ObsidianWorkflow.ps1
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
windows/: CMakeLists.txt
(+210 files in other folders)
